2005-10-22 Niklas Knutsson  <nq@altern.org>

	* GUI polishing

2005-10-21 Niklas Knutsson  <nq@altern.org>

	* GUI redesign along the lines of the KDE GUI

2005-10-20 Niklas Knutsson  <nq@altern.org>

	* Fix display of too many arguments message
	* Configuration of status warning and error colors
	* Split preferences dialog in two tabs

2005-10-19 Niklas Knutsson  <nq@altern.org>

	* Modes updates
	* Update documentation
	* Update Swedish translation
	* Fix as-you-type function hints when unlimited number of arguments
	* Increase max value length in variables dialog
	* Font selection for status label
	* Choice to disable as-you-type expression status

2005-10-18 Niklas Knutsson  <nq@altern.org>

	* Ability to save different modes
	* Fix as-you-type parsing with " to " in expression
	* Display as-you-type parsing with warnings in blue
	* Add mode menu to result popup menu

2005-10-17 Niklas Knutsson  <nq@altern.org>

	* Display parsing and function hints under the expression entry to the left

2005-10-13 Niklas Knutsson  <nq@altern.org>

	* Fix help display with new yelp

2005-10-11 Niklas Knutsson  <nq@altern.org>

	* Change alignment in entries in base and units dialogs
	* Fix result text cropping in pango >= 1.10.0 (add inc_rect.x to inc_rect.width)

2005-10-05 Niklas Knutsson  <nq@altern.org>

	* Add -export-dynamic to LDFLAGS to fix libglade without libgnome
	* Option to change wget arguments in preferences dialog

2005-06-10 Niklas Knutsson  <nq@altern.org>

	* Check that prefix name can be displayed
	* Close gnuplot and disable save button when no series defined

2005-06-09 Niklas Knutsson  <nq@altern.org>

	* Use number base for expression parsing when printing parsed expression
	* Support for "e" instead of "E" in result

2005-06-08 Niklas Knutsson  <nq@altern.org>

	* Display correct equals in history on updated display format

2005-06-05 Niklas Knutsson  <nq@altern.org>

	* Reload also recent composite units and getActive...
	* Bitwise NOT (~)